# beans

./: .gitignore  .pnp.js  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json
bindings/c/: Cargo.toml  bindings.h  build.rs
bindings/c/src/: lib.rs
bindings/dart/: Cargo.toml
bindings/deno/: Cargo.toml
bindings/nodejs/: Cargo.toml
bindings/nodejs/src/: client.rs  lib.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
examples/: simple.rs
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  types.rs
